# pyfm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
example/workspace/: pyfm
example/workspace/work-dir/: .gitignore  README.md  contract.sh  hadrons.sh  params.yaml  smear.sh  todo
example/workspace/work-dir/in/: example-tau-l4444-hadrons-a.20.xml  test-l4444-contract-a.20.yaml  test-l4444-hadrons-a.20.xml  test-l4444-smear-a.20.txt
example/workspace/work-dir/slurm-example/: contract_example.slurm  hadrons_example.slurm  smear_example.slurm
pyfm/: .tags  .tags_sorted_by_file  __init__.py  config.py  config_builders.py  processor.py  utils.py
pyfm/_archive/archive/: bias_params.py  debug_params.py  eig_lma_meson_params.py  eig_meson_params.py  eig_params.py  eigs_params.py  lma_meson_local_params.py  lma_params.py  sib_params.py
pyfm/_archive/archive/qed/: a2a_meson_params.py  (+16 more)
pyfm/_archive/broken/: a2a_sib.py  seq_sib.py  test_a2a_vectors.py
pyfm/a2a/: __init__.py  config.py  contract.py  contractions.py  execution.py  meson_loader.py  mesonloader.py  register.py  time_operations.py
pyfm/analysis/: constants.py  datasets.py  domain.py  kernels.py  utils.py
pyfm/analysis/components/: mask.py  plot.py  process.py
pyfm/analysis/services/: filter.py  process.py
pyfm/core/: builder.py
pyfm/dataio/: __init__.py  converter.py  loader.py  processor.py  writer.py
pyfm/domain/: __init__.py  a2atypes.py  builder.py  buildertypes.py  conftypes.py  datapipe.py  hadtypes.py  io.py  ops.py  outfiles.py  protocols.py  registry.py
pyfm/nanny/: __init__.py  aggregator.py  checkjobs.py  config.py  inputgen.py  make_todo.py  registry.py  setup.py  spawnjob.py  submitter.py  todo.py  todo_utils.py  validator.py
pyfm/nanny/tasks/: __init__.py  contract.py  smear.py
pyfm/processing/: config.py  dataio.py  plot.py  processor.py
pyfm/tasks/: __init__.py  contract.py  register.py  smear.py
pyfm/tasks/contract/: __init__.py  contraction.py  diagram.py  mesonloader.py
pyfm/tasks/hadrons/: __init__.py  epack.py  gauge.py  lmi.py  meson.py  modules.py  raw.py  types.py
pyfm/tasks/milc/: __init__.py  smear.py
pyfm/test/nanny/: params.yaml  test_input.py
pyfm/utils/: __init__.py  io.py  logging.py  string.py  todo.py  typecheck.py
scripts/: aggregate_hadrons_contract_data.py  aggregate_task_data.py  check_task_completion.py  compare_hdf5_matrices.py  contract_a2a_diagrams.py  generate_input.py  merge_completed_df.py  process_lmi_df.py  process_task.py  run_nanny.py  task_data_to_df.py  xml_diff.py
test/nanny/: l3248_params.yaml  test_generate_input.py
test/nanny/in/: test-l3248-hadrons-a.100.xml
test/nanny/schedules/: test-l3248-hadrons-a.100.sched
(+138 files in other folders)
